<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_activity"
    android:padding="@dimen/spacing_14dp">

    <LinearLayout
        android:id="@+id/headerPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_panel"
        android:orientation="vertical"
        android:padding="@dimen/spacing_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ui_carappstore"
            android:textColor="@color/car_text_primary"
            android:textSize="@dimen/text_2xl"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_6dp"
            android:text="@string/ui_service_center_subtitle"
            android:textColor="@color/car_text_secondary"
            android:textSize="@dimen/text_xs" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_12dp"
        android:layout_marginBottom="@dimen/spacing_12dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerPanel" />

    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:background="@drawable/bg_panel"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/spacing_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnNavHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_nav_button"
            android:text="@string/ui_home"
            android:textAllCaps="false"
            android:textColor="@color/car_text_primary"
            android:textSize="@dimen/text_sm" />

        <Button
            android:id="@+id/btnNavSearch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing_8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nav_button"
            android:text="@string/ui_search"
            android:textAllCaps="false"
            android:textColor="@color/car_text_primary"
            android:textSize="@dimen/text_sm" />

        <Button
            android:id="@+id/btnNavDownload"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing_8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nav_button"
            android:text="@string/ui_download_manager"
            android:textAllCaps="false"
            android:textColor="@color/car_text_primary"
            android:textSize="@dimen/text_sm" />

        <Button
            android:id="@+id/btnNavMyApps"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing_8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_nav_button"
            android:text="@string/ui_my_apps"
            android:textAllCaps="false"
            android:textColor="@color/car_text_primary"
            android:textSize="@dimen/text_sm" />
    </LinearLayout>

    <Button
        android:id="@+id/btnNavUpgrade"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnNavInstall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnNavDebug"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvDesktopSummaryTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvDesktopSummaryBody"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>
